--- a/VpnManagerWPF/Views/ClientConnectionView.xaml
+++ b/VpnManagerWPF/Views/ClientConnectionView.xaml
@@ -5,8 +5,30 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:VpnManagerWPF.Views"
              mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="800">
-    <Grid>
-            
+             xmlns:cal="http://www.caliburnproject.org"
+        d:DesignHeight="450" d:DesignWidth="800"
+             >
+    <Grid  >
+        <Grid.RowDefinitions>
+            <RowDefinition Height="377*"/>
+            <RowDefinition Height="73*"/>
+        </Grid.RowDefinitions>
+        <StackPanel Background="Beige" Grid.Row="0">
+            <Image>
+
+            </Image>
+        </StackPanel>
+        <DockPanel Grid.Row="1">
+            <Grid>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="*"/>
+                    <ColumnDefinition Width="*"/>
+                    <ColumnDefinition Width="*"/>
+                </Grid.ColumnDefinitions>
+                <Button Grid.Column="0" Content="Disconnect" BorderBrush="Black" 	cal:Message.Attach="[Event Click] = [Action Connect]"> </Button>
+                <Button Grid.Column="3" Content="Disconnect" BorderBrush="Black"	cal:Message.Attach="[Event Click] = [Action Disconnect]" ></Button>
+            </Grid>
+
+        </DockPanel>
     </Grid>
 </UserControl>
