--- a/VpnManagerWPF/Views/MainView.xaml
+++ b/VpnManagerWPF/Views/MainView.xaml
@@ -40,16 +40,34 @@
             <RowDefinition Height="280*"/>
             <RowDefinition Height="71*"/>
         </Grid.RowDefinitions>
-        <DockPanel  Grid.Row="1" >
-            <ContentControl x:Name="ActiveItem" Grid.RowSpan="2" Margin="0,5,0,0" d:LayoutOverrides="LeftMargin, RightMargin, TopMargin, BottomMargin"/>
+        <DockPanel Grid.Row="0">
+            <Button  DockPanel.Dock="Left"
+                    Height="20" 
+                    Width="20" 
+                    Background="Gray" 
+                    HorizontalAlignment="Left"
+                    cal:Message.Attach="[Event Click] = [Action GoHome]">
+            </Button>
         </DockPanel>
+        <DockPanel  Grid.Row="1" >
+            <ContentControl x:Name="ActiveItem" Grid.RowSpan="2" Margin="0,5,0,0"/>
+        </DockPanel>
+        <Controls:ProgressRing HorizontalAlignment="Stretch" Grid.ZIndex="3"  
+                                   Height="Auto" 
+                                   Width="Auto" 
+                                   IsActive="True" 
+                                   Grid.Row="1"
+                                   Visibility="{Binding WaitingProgressVisibility}" 
+                                   Foreground="Black" Margin="113,20,113,30"                                    
+                                   VerticalAlignment="Stretch" 
+                                  />
 
-        <Controls:ProgressRing HorizontalAlignment="Stretch" Grid.ZIndex="3"  Height="Auto" Width="Auto" IsActive="True" Visibility="{Binding WaitingProgressVisibility}" Foreground="Black" Margin="113,20,113,30" Grid.Row="1" VerticalAlignment="Stretch" d:LayoutOverrides="LeftMargin, RightMargin, TopMargin, BottomMargin"/>
         <DockPanel Grid.Row="2" >
-            <ListView Name="logView" ItemsSource="{Binding Info}" BorderBrush="Black" BorderThickness="3,5,5,5" Focusable="False" d:LayoutOverrides="LeftMargin, RightMargin, TopMargin, BottomMargin">
-            <ListView.Effect>
-                <DropShadowEffect/>
-            </ListView.Effect>
+            <ListView Name="logView" ItemsSource="{Binding Info}" 
+                      BorderBrush="Black" BorderThickness="1,1,1,1" 
+                      Focusable="False" 
+                      d:LayoutOverrides="LeftMargin, RightMargin, TopMargin, BottomMargin">
+         
             <ListView.ItemContainerStyle>
                 <Style TargetType="ListViewItem">
                     <Style.Triggers>
